--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -41,6 +41,10 @@ WORDSUM is a Numeric variable. DEGREE is a Categorical variable.
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(WORDSUM~DEGREE,data=gssDataframe)
+```
+From the box plot it appears that wordsums are different folks that have  in high scschool scores less  
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
