--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -11,7 +11,7 @@ output:
 require(knitr)
 require(tidyverse)
 require(tigerstats)
-
+require(mosaic)
 ```
 
 # Introduction
@@ -48,6 +48,10 @@ From the box plot it appears that wordsums are different folks that have  in hig
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+```{r}
+favstats(WORDSUM~DEGREE,data=gssDataframe)
+```
 
 ## Inferential Results
 
