--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -53,6 +53,7 @@ From the box plot it appears that wordsums are different folks that have  in hig
 favstats(WORDSUM~DEGREE,data=gssDataframe)
 ```
 
+It appears like there is a differnce in the median of graduate students it looks like the ability on the WORDSUM category
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
