--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -63,8 +63,20 @@ model1 <- aov(WORDSUM~DEGREE,data=gssDataframe)
 summary.aov(model1)
 ```
 
+Based on the  P-value is 0.000236 I reject the null hypothesis Ho
+because the value is less than .05.
 
 
+
+```{r}
+#we specify the margins starting at the bottom and proceeding clockwise - thus 8.7 is the left side margin to hold the names of the factors
+par(mar = c(3, 15, 2, 2))
+plot(TukeyHSD(model1),las=2)
+```
+explain whic levels do not cross 0
+ 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+Based on the graph There is a difference between high school and and Graduate students and between less than high school and graduate. 
