--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -30,7 +30,8 @@ $H_a$ There is a significant difference in average score on the WORDSUM test bet
 gssDataframe=read.csv("GSScsv.csv")
 ```
 
-WORDSUM is a Numeric variable. DEGREE is a Categorical variable. 
+WORDSUM is a Numeric variable. DEGREE is a Categorical variable.  
+
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
@@ -44,7 +45,9 @@ WORDSUM is a Numeric variable. DEGREE is a Categorical variable.
 ```{r}
 boxplot(WORDSUM~DEGREE,data=gssDataframe)
 ```
+
 From the box plot it appears that wordsums are different folks that have  in high scschool scores less  
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
@@ -54,6 +57,7 @@ favstats(WORDSUM~DEGREE,data=gssDataframe)
 ```
 
 It appears like there is a differnce in the median of graduate students it looks like the ability on the WORDSUM category
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
@@ -73,10 +77,12 @@ because the value is less than .05.
 par(mar = c(3, 15, 2, 2))
 plot(TukeyHSD(model1),las=2)
 ```
-explain whic levels do not cross 0
+
+Explain that levels do not cross 0
  
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
-Based on the graph There is a difference between high school and and Graduate students and between less than high school and graduate. 
+
+Based on the graph There is a difference between high school and and Graduate students and between less than high school and graduate. there is 
