--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -6,12 +6,12 @@ output:
   html_document:
     df_print: paged
 ---
- 
+
 ```{r include=FALSE,echo=FALSE}
 require(knitr)
 require(tidyverse)
 require(tigerstats)
-
+require(mosaic)
 ```
 
 # Introduction
@@ -26,6 +26,12 @@ $H_a$ There is a significant difference in average score on the WORDSUM test bet
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
 
+```{r}
+gssDataframe=read.csv("GSScsv.csv")
+```
+
+WORDSUM is a Numeric variable. DEGREE is a Categorical variable.  
+
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
@@ -36,15 +42,45 @@ $H_a$ There is a significant difference in average score on the WORDSUM test bet
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(WORDSUM~DEGREE,data=gssDataframe)
+```
+
+From the box plot it appears that WORDSUM test scores are different. Individuals that have a high school degree or less education scored lower compared to individuals with higher education such as a graduate degree.    
+ 
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+```{r}
+favstats(WORDSUM~DEGREE,data=gssDataframe)
+```
+
+It appears that there is a difference in the median score and ability on the WORDSUM test scores of graduate students versus students with high school or less education.
 
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+model1 <- aov(WORDSUM~DEGREE,data=gssDataframe)
+summary.aov(model1)
+```
 
+I reject the null hypothesis $H_0$ based on the P-value is 0.000236
+because the value is less than 0.05.
+
+
+```{r}
+#we specify the margins starting at the bottom and proceeding clockwise - thus 8.7 is the left side margin to hold the names of the factors
+par(mar = c(3, 15, 2, 2))
+plot(TukeyHSD(model1),las=2)
+```
+
+Based on the graph there is a significant difference between high school vs graduate school taht does not include 0. There is also a difference between less then high school and graduate school since neither crosses 0. 
+ 
 # Discussion and Conclusion
 
-<!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+<!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variables causes the other, or whether they perhaps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+We ae asked to find if there is a difference between the WORDSUM test scores of individuals varying from less than high education to graduate students. Based on the information and the P-value 0.000236, less than 0.05, I reject the null hypothosis and conclude that there is a difference between test scores of students with varying degrees.  
